<resources>
    <string name="app_name">Go White</string>

    <string name="book_now">BOOK NOW</string>
    <string name="booked_before">BOOKED BEFORE</string>

    <string name="settings_country_and_language">COUNTRY &amp; LANGUAGE SETTINGS</string>

    <string name="already_member">Already a member?</string>


    <string name="login">login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone (050 123 4567)</string>
    <string name="change">Change</string>

    <string name="need_cleaning_materials">Need Cleaning Materials ?</string>

    <string name="cleaning_instructions">Cleaning Instructions</string>

    <string name="next">Next ></string>


    <string name="title_cleaning_details">Cleaning Details</string>
    <string name="title_date_time">Date &amp; Time</string>
    <string name="title_contact_details">Contact Details</string>

    <string name="cleaning_time">What time would you like us to start?</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="full_address">Full Address</string>
    <string name="HowIn">How will you let the cleaner in ?</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="apply">Apply</string>
    <string name="payment_method">Payment Method</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="title_payment">Payment</string>
    <string name="OrderDetails">Order Details</string>
    <string name="repetition">Frequency</string>


    <string name="title_summary">Summary</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">duration</string>
    <string name="cleaners_num">Cleaners number</string>
    <string name="cleaning_materials">Cleaning Materials</string>
    <string name="price">Price</string>
    <string name="ContactsInfo">Contact Information</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="reserve">Reserve</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_password_msg">Password length must be minimum 6</string>
    <string name="error_is_valid_email">please enter a valid email</string>

    <string name="thank_you">Thank You</string>


    <string name="commitment">We will do our best to arrive on time.\n However, there might be a delay of up to 45 minutes, due to traffic conditions, \nbut we will complete the full hours from the time of arrival</string>

    <string name="your_code">your code is:</string>
    <string name="price_currency">%d AED</string>
    <string name="price_per_hour_currency">(%d AED / Hour)</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_country">Select Country</string>
</resources>
