<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:id="@+id/linear_not_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <com.nayra.gowhite.custom_views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_link"
                android:text="@string/already_member"
                android:gravity="center"
                android:layout_margin="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <!--<com.facebook.login.widget.LoginButton
                    android:id="@+id/btn_fb_login"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />-->

                <com.nayra.gowhite.custom_views.MyButton
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="0.5"
                    android:text="@string/login"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>


        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>


        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>

        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>

        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>


        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>

        <Spinner
            android:id="@+id/spCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:spinnerMode="dialog">

        </Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Spinner
            android:id="@+id/spAreas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:spinnerMode="dialog"></Spinner>

        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_address">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>

        <com.nayra.gowhite.custom_views.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HowIn">

            <com.nayra.gowhite.custom_views.MyErrorEditText
                android:id="@+id/etHowCleanerIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.nayra.gowhite.custom_views.MyTextInputLayout>


    </LinearLayout>


</ScrollView>