<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.nayra.gowhite.authentication.LoginActivity">

            <com.nayra.gowhite.custom_views.MyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.nayra.gowhite.custom_views.MyErrorEditText
                    android:id="@+id/etEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_margin="5dp" />

            </com.nayra.gowhite.custom_views.MyTextInputLayout>

            <com.nayra.gowhite.custom_views.MyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.nayra.gowhite.custom_views.MyErrorEditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_margin="5dp"
                    android:hint="@string/password" />

            </com.nayra.gowhite.custom_views.MyTextInputLayout>


            <com.nayra.gowhite.custom_views.MyButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_rounded_corner_button"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_fb_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>